language update  refs #3430

--- a/lang/el.json
+++ b/lang/el.json
@@ -209,6 +209,7 @@
         "LastDays": "Τελευταίες %s ημέρες (με τη σημερινή)",
         "LastDaysShort": "Τελευτείες %s ημέρες",
         "LayoutDirection": "ltr",
+        "LearnMore": "%1$sμάθετε περισσότερα%2$s",
         "Live": "Σε πραγματικό χρόνο",
         "Loading": "Φόρτωση...",
         "LoadingData": "Φόρτωση δεδομένων...",
@@ -355,6 +356,7 @@
         "Seconds": "%s δευτερόλεπτα",
         "SeeAll": "δείτε τα όλα",
         "SeeTheOfficialDocumentationForMoreInformation": "Δείτε την %sεπίσημη τεκμηρίωση%s για περισσότερες πληροφορίες.",
+        "SeeThisFaq": "Δείτε %1$sτις συχνές ερωτήσεις-απαντήσεις%2$s.",
         "Segment": "Τμήμα",
         "SelectYesIfYouWantToSendEmailsViaServer": "Επιλέξτε «Ναι», αν θέλετε να αποστείλετε την ηλεκτρονική επιστολή μέσω ενός ονομασμένου διακομιστή αντί της τοπικής συνάρτησης αλληλογραφίας",
         "Settings": "Ρυθμίσεις",
@@ -433,6 +435,7 @@
         "WarningFileIntegrityNoMd5file": "Ο έλεγχος ακεραιότητας αρχείου δεν μπορεί να ολοκληρωθεί γιατί είναι ανενεργή η συνάρτηση md5_file().",
         "WarningPasswordStored": "%sΠροειδοποίηση:%s Αυτός ο κωδικός πρόσβασης θα αποθηκευτεί στο αρχείο ρυθμίσεων και θα είναι ορατός από οποιονδήποτε έχει πρόσβαση σε αυτό.",
         "WarningPhpVersionXIsTooOld": "Η έκδοση PHP %s που χρησιμοποιείτε έχει φτάσει στο Τέλος Ζωής της (EOL). Συνιστάται να αναβαθμίσετε στην τρέχουσα έκδοση, καθώς η χρήση αυτή της έκδοσης μπορεί να σας εκθέσει σε προβλήματα ασφαλείας και σφάλματα που έχουν διορθωθεί στις πρόσφατες εκδόσεις της PHP.",
+        "WarningPiwikWillStopSupportingPHPVersion": "Το Piwik θα σταματήσει να υποστηρίζει αυτή την έκδοση στο %s. Αναβαθμίστε την έκδοση της PHP σας προτού είναι αργά!",
         "Website": "Ιστοσελίδα",
         "Weekly": "Εβδομαδιαίως",
         "WeeklyReport": "εβδομαδιαία",
