--- a/lang/fr.json
+++ b/lang/fr.json
@@ -66,6 +66,7 @@
         "ColumnNbActionsDocumentation": "Nombre d'actions effectuées par vos visiteurs. Les actions peuvent être des visites de pages, téléchargements, liens sortants.",
         "ColumnNbUniqVisitors": "Visiteurs uniques",
         "ColumnNbUniqVisitorsDocumentation": "Nombre de visiteurs uniques visitant votre site web. Chaque utilisateur n'est compté qu'une seule fois, même s'il visite le site plusieurs fois dans la journée.",
+        "ColumnNbUsers": "Utilisateurs",
         "ColumnNbVisits": "Visites",
         "ColumnNbVisitsDocumentation": "Si un visiteur se rend sur votre site web pour la première fois ou s'il visite une page plus de 30 minutes après sa dernière page, il sera enregistré en tant que nouvelle visite.",
         "ColumnPageBounceRateDocumentation": "Pourcentage de visites qui ont commencé sur cette page et ont tout de suite quitté le site.",
@@ -207,6 +208,7 @@
         "LastDays": "%s derniers jours (aujourd'hui inclus)",
         "LastDaysShort": "Derniers %s jours",
         "LayoutDirection": "ltr",
+        "LearnMore": "%1$ssavoir plus%2$s",
         "Live": "En direct",
         "Loading": "Chargement...",
         "LoadingData": "Chargement des données...",
@@ -271,6 +273,7 @@
         "NotValid": "%s n'est pas valide",
         "NSeconds": "%s secondes",
         "NumberOfVisits": "Nombre de visites",
+        "NUsers": "%s utilisateurs",
         "NVisits": "%s visites",
         "Ok": "Ok",
         "OneAction": "1 action",
@@ -405,6 +408,7 @@
         "Unknown": "Inconnu",
         "Upload": "Téléchargement",
         "UsePlusMinusIconsDocumentation": "Utilisez les icônes plus et moins sur la gauche pour naviguer.",
+        "UserId": "Identifiant utilisateur",
         "Username": "Nom d'utilisateur",
         "UseSMTPServerForEmail": "Utiliser le serveur SMTP pour les mails",
         "Value": "Valeur",
@@ -428,6 +432,8 @@
         "WarningFileIntegrityNoManifestDeployingFromGit": "Si vous déployez Piwik depuis Git, ce message est normal.",
         "WarningFileIntegrityNoMd5file": "Le contrôle d'intégrité n'a pu être effectué car la fonction md5_file() est manquante.",
         "WarningPasswordStored": "%sAttention:%s Ce mot de passe sera stocké dans le fichier de configuration et sera visible pour n'importe qui y ayant accès.",
+        "WarningPhpVersionXIsTooOld": "La version de PHP que vous utilisez (%s) est en fin de support. Nous vous incitons vivement à upgrader vers une version plus récente. Votre version actuelle vous expose à des failles de sécurité et des bugs qui ont été corrigés dans les versions les plus récentes de PHP.",
+        "WarningPiwikWillStopSupportingPHPVersion": "Piwik va arrêter le support de cette version de PHP en %s. Mettez à jour votre version de PHP avant qu'il ne soit trop tard !",
         "Website": "Site",
         "Weekly": "Hebdomadaire",
         "WeeklyReport": "hebdomadaire",
