--- a/lang/it.json
+++ b/lang/it.json
@@ -209,6 +209,7 @@
         "LastDays": "Ultimi %s giorni (incluso oggi)",
         "LastDaysShort": "Ultimi %s giorni",
         "LayoutDirection": "ltr",
+        "LearnMore": "%1$simpara di più%2$s",
         "Live": "Dal vivo",
         "Loading": "Caricamento...",
         "LoadingData": "Sto caricando i dati...",
@@ -354,6 +355,7 @@
         "Seconds": "%ss",
         "SeeAll": "vedi tutto",
         "SeeTheOfficialDocumentationForMoreInformation": "Vedi %sla documentazione ufficiale%s per maggiori informazioni",
+        "SeeThisFaq": "Vedi %1$squesta faq%2$s.",
         "Segment": "Segmento",
         "SelectYesIfYouWantToSendEmailsViaServer": "Seleziona \"Si\" se vuoi mandare le email attraverso un altro server, diverso dalla funzione email locale.",
         "Settings": "Impostazioni",
@@ -432,6 +434,7 @@
         "WarningFileIntegrityNoMd5file": "Il controllo dell'integrità dei file non può essere eseguito per la mancanza della funzione md5_file().",
         "WarningPasswordStored": "%sAttenzione:%s Questa password verrà salvata nel file di configurazione e sarà visibile a chiunque ne ha accesso.",
         "WarningPhpVersionXIsTooOld": "La versione %s di PHP che stai utilizzando ha raggiunto il fine vita (EOL). Si invita caldamente ad aggiornare con urgenza all'ultima versione, perché l'uso di questa versione può esporti a vulnerabilità nella sicurezza e ai bug che sono stati corretti nelle versioni più recenti di PHP.",
+        "WarningPiwikWillStopSupportingPHPVersion": "Piwik cesserà di supportare questa versione del PHP nel %s. Aggiorna la tua versione del PHP prima che sia troppo tardi!",
         "Website": "Sito:",
         "Weekly": "Settimanale",
         "WeeklyReport": "settimanale",
