--- a/lang/nl.json
+++ b/lang/nl.json
@@ -32,6 +32,7 @@
         "ChooseLanguage": "Kies taal",
         "ChoosePeriod": "Kies periode",
         "ChooseWebsite": "Kies website",
+        "Clear": "Duidelijk",
         "ClickHere": "Klik hier voor meer informatie.",
         "ClickToChangePeriod": "Klik nog een keer om de periode te veranderen.",
         "Close": "Sluiten",
@@ -65,6 +66,7 @@
         "ColumnNbActionsDocumentation": "Het aantal acties dat de bezoekers doen, dit kunnen pagina bezichtingen, downloads of clicks op links naar buiten de site zijn.",
         "ColumnNbUniqVisitors": "Unieke bezoekers",
         "ColumnNbUniqVisitorsDocumentation": "Het aantal unieke bezoekers van uw website. Iedere bezoeker wordt eenmalig geteld, ook al bezoekt deze bezoeker de website meerdere malen per dag.",
+        "ColumnNbUsers": "Gebruikers",
         "ColumnNbVisits": "Bezoeken",
         "ColumnNbVisitsDocumentation": "Wanneer een bezoeker de website voor de eerste keer bezoekt of wanneer een bezoeker de website opnieuw bezoekt na 30 minuten dan wordt dit gezien al een nieuw website bezoek.",
         "ColumnPageBounceRateDocumentation": "Het percentage bezoeken dat begonnen is op deze pagina en de website direct verlaten hebben.",
@@ -163,9 +165,12 @@
         "ExceptionPrivilege": "U kunt deze bron niet verwijderen omdat %s toegang is vereist.",
         "ExceptionPrivilegeAccessWebsite": "U kunt deze bron niet verwijderen omdat %s toegang is vereist voor website id=%d.",
         "ExceptionPrivilegeAtLeastOneWebsite": "U kunt deze bron niet verwijderen omdat %s toegang is vereist voor tenminste één website.",
+        "ExceptionReportNotFound": "Het aangevraagde rapport bestaat niet.",
         "ExceptionUnableToStartSession": "Kan sessie niet starten.",
         "ExceptionUndeletableFile": "Kan %s niet verwijderen.",
         "ExceptionUnreadableFileDisabledMethod": "Het configuratiebestand {%s} kon niet gelezen worden. Uw host kan %s uitgeschakeld hebben.",
+        "ExceptionWidgetNotFound": "Het opgevraagde widget bestaat niet.",
+        "ExpandDataTableFooter": "Verander de visualisatie of configureer het rapport",
         "Export": "Exporteren",
         "ExportAsImage": "Exporteer als afbeelding",
         "ExportThisReport": "Exporteer deze dataset naar andere formaten",
@@ -199,6 +204,7 @@
         "LastDays": "Laatste %s dagen (inclusief vandaag)",
         "LastDaysShort": "Laatste %s dagen",
         "LayoutDirection": "ltr",
+        "LearnMore": "%1$smeer leren%2$s",
         "Live": "Live",
         "Loading": "Laden…",
         "LoadingData": "Data laden…",
@@ -263,6 +269,7 @@
         "NotValid": "%s is niet geldig",
         "NSeconds": "%s seconden",
         "NumberOfVisits": "Aantal bezoeken",
+        "NUsers": "%s gebruikers",
         "NVisits": "%s bezoeken",
         "Ok": "Ok",
         "OneAction": "1 actie",
@@ -342,6 +349,7 @@
         "Seconds": "%ss",
         "SeeAll": "Bekijk alles",
         "SeeTheOfficialDocumentationForMoreInformation": "Zie de %sofficiële documentatie%s voor meer info.",
+        "SeeThisFaq": "Bekijk %1$sdeze veelgestelde vraag%2$s.",
         "Segment": "Segment",
         "SelectYesIfYouWantToSendEmailsViaServer": "Selecteer \"Ja\" als u wilt dat mail verzonden wordt via een opgegeven server in plaats van de lokale mail functie.",
         "Settings": "Instellingen",
@@ -395,6 +403,7 @@
         "Unknown": "Onbekend",
         "Upload": "Uploaden",
         "UsePlusMinusIconsDocumentation": "Gebruik de + en - icoontjes aan de linkerzijde om te navigeren.",
+        "UserId": "Gebruikersnaam",
         "Username": "Gebruikersnaam",
         "UseSMTPServerForEmail": "Gebruik SMTP server voor e-mail",
         "Value": "Waarde",
@@ -417,6 +426,7 @@
         "WarningFileIntegrityNoManifest": "Bestand integriteit controle kon niet worden uitgevoerd vanwege ontbrekend manifest.inc.php",
         "WarningFileIntegrityNoMd5file": "Bestand integriteit controle kon niet worden voltooid vanwege ontbrekende md5_file() functie.",
         "WarningPasswordStored": "%sWaarschuwing:%s Dit wachtwoord zal worden bewaard in het configuratie bestand, zichtbaar voor iedereen dat toegang heeft.",
+        "WarningPiwikWillStopSupportingPHPVersion": "Piwik stopt de ondersteuning van deze PHP versie in %s. Upgrade je PHP versie voor het te laat is!",
         "Website": "Website",
         "Weekly": "Wekelijks",
         "WeeklyReport": "wekelijks",
