--- a/plugins/CoreAdminHome/lang/fi.json
+++ b/plugins/CoreAdminHome/lang/fi.json
@@ -10,6 +10,8 @@
         "CustomLogoHelpText": "Voit vaihtaa Piwikin logoa, joka näytetään käyttöliittymässä ja sähköpostiraporteissa.",
         "DevelopmentProcess": "%sKehitysprosessimme%s sisältää tuhansia automatisoituja testejä, ja Beta testeillä on avainrooli Piwikin \"Ei bugeja\" -toimintaperiaatteessa.",
         "EmailServerSettings": "Sähköpostipalvelimen asetukset",
+        "FaviconUpload": "Valitse lähetettävä ikoni",
+        "FileUploadDisabled": "Tiedostojen lähettämistä ei ole sallittu PHP-asetuksissasi. Vaihda %s php.ini:ssä ja käynnistä web-serverisi uudelleen ensin.",
         "ForBetaTestersOnly": "Vain beta-testaajille",
         "ImageTracking": "Kuvaseuranta",
         "ImageTrackingIntro1": "Kun kävijä on inaktivoinut JavaScriptin, tai kun JavaScriptiä ei voida käyttää, voit seurata kävijöitä kuvaseurannan avulla.",
@@ -26,6 +28,8 @@
         "JSTracking_CodeNote": "Varmista, että tämä koodi löytyy jokaiselta verkkosivusi sivulta ennen %1$s tagia.",
         "JSTracking_CustomCampaignQueryParam": "Käytä omia parametrejä kampanjoiden nimille ja avainsanoille",
         "JSTracking_CustomCampaignQueryParamDesc": "Huomaa: %1$sPiwik jäljittää automaattisesti Google Analytics parametrejä.%2$s",
+        "JSTracking_DisableCookies": "Poista kaikki seurantakeksit käytöstä",
+        "JSTracking_DisableCookiesDesc": "Poista kaikki ensimmäisen osapuolen keksit käytöstä. Tämän sivun keksit poistetaan kun käyttäjä avaa minkä tahansa sivun seuraavan kerran.",
         "JSTracking_EnableDoNotTrack": "Aktivoi asiakassivu \"EiSeurantaa\" havaittu",
         "JSTracking_EnableDoNotTrack_AlreadyEnabled": "Huomio: Palvelimen sivu EiSeurantaa-tuki on aktivoitu, joten tällä valinnalla ei ole vaikutusta.",
         "JSTracking_EnableDoNotTrackDesc": "Seurantapyyntöjä ei lähetetä, mikäli kävijät eivät halua tulla seuratuiksi.",
@@ -49,6 +53,7 @@
         "LogoNotWriteableInstruction": "Käyttääksesi omaa logoa Piwikin oletuslogon sijasta, anna tälle hakemistolle kirjoitusoikeus: %1$s Piwik tarvitsee kirjoitusoikeuden logoillesi tiedostoissa %2$s.",
         "LogoUpload": "Valitse tallennettava logo",
         "LogoUploadHelp": "Lähetä tiedosto formaatissa %s ja %s pikselin vähimmäiskorkeudella.",
+        "MenuDevelopment": "Kehitys",
         "MenuDiagnostic": "Vianmääritys",
         "MenuGeneralSettings": "Yleiset asetukset",
         "MenuManage": "Hallinnoi",
@@ -60,10 +65,12 @@
         "PiwikIsInstalledAt": "Piwik on asennettu kohteeseen",
         "PluginDescription": "Piwikin ylläpito.",
         "PluginSettingChangeNotAllowed": "Arvojen muuttaminen \"%s\" liitännäisessä \"%s\" -asetuksissa ei ole sallittua",
+        "PluginSettingReadNotAllowed": "Et voi lukea asetusta \"%s\" lisäosasta \"%s\"",
         "PluginSettings": "Lisäosan asetukset",
         "PluginSettingsIntro": "Täällä voit muuttaa kolmannen osapuolen liitännäisten asetuksia:",
         "PluginSettingsValueNotAllowed": "Arvo kentälle \"%s\" liitännäisessä \"%s\" ei ole sallittu",
         "SendPluginUpdateCommunication": "Lähetä minulle sähköposti-ilmoitus uusista lisäosien päivityksistä",
+        "SendPluginUpdateCommunicationHelp": "Pääkäyttäjät saavat sähköpostia kun lisäosasta on saatavilla uusi versio.",
         "StableReleases": "Jos Piwik on tärkeä osa liiketointasi, suosittelemme päivittämistä uusimpaan versioon. Jos käytt uusinta beta-versiota ja löydät bugin tai sinulla on ehdotus, %slue tämä%s.",
         "TrackAGoal": "Seuraa tavoitetta",
         "TrackingCode": "Seurantakoodi",
