--- a/plugins/CoreAdminHome/lang/nl.json
+++ b/plugins/CoreAdminHome/lang/nl.json
@@ -11,6 +11,7 @@
         "DevelopmentProcess": "Hoewel ons %s ontwikkel process %s duizenden automatisch tests omvat, spelen Beta testers een belangrijke rol in het \"No bug beleid\" in Piwik.",
         "EmailServerSettings": "E-mail server instellingen",
         "FaviconUpload": "Selecteer een favicon om up te loaden",
+        "FileUploadDisabled": "Het uploaden van documenten is niet geactiveerd in je PHP configuratie. Om een aangepast logo up te loaden pas %s aan in php.ini en herstart de webserver.",
         "ForBetaTestersOnly": "Alleen voor beta testers",
         "ImageTracking": "Afbeelding tracking",
         "ImageTrackingIntro1": "Wanneer een bezoeker javaScript heeft uitgeschakeld, of wanneer JavaScript niet kan worden gebruikt, kun je een tracking afbeelding gebruiken om bezoekers te volgen.",
@@ -27,6 +28,8 @@
         "JSTracking_CodeNote": "Zorg dat deze code is geplaatst voor de %1$s tag op elke pagina op uw website.",
         "JSTracking_CustomCampaignQueryParam": "Gebruik aangepaste query parameter namen voor de campagne naam & sleutelwoorden",
         "JSTracking_CustomCampaignQueryParamDesc": "Opmerking: %1$s Piwik detecteert automatisch Google Analytics parameters.%2$s",
+        "JSTracking_DisableCookies": "Schakel alle tracking cookies uit",
+        "JSTracking_DisableCookiesDesc": "Schakelt alle first party cookies uit. Bestaande Piwik cookies voor deze website zullen worden verwijderd bij het opnieuw laden van de pagina.",
         "JSTracking_EnableDoNotTrack": "Schakel Client side DoNotTrack detectie in.",
         "JSTracking_EnableDoNotTrack_AlreadyEnabled": "Opmerking: Server side DoNotTrack ondersteuning is ingeschakeld, deze optie heeft dus geen effect.",
         "JSTracking_EnableDoNotTrackDesc": "Tracking verzoeken zullen niet worden verzonden indien de bezoeker niet wenst gevolgd te worden.",
@@ -50,6 +53,7 @@
         "LogoNotWriteableInstruction": "Om je eigen logo te gebruiken in plaats van het standaard Piwik logo, zijn er schrijf rechten nodig tot de volgende bestandmap: %1$s Piwik heeft schrijfrechten nodig voor de jouw logo's opgeslagen in de bestanden %2$s",
         "LogoUpload": "Selecteer een logo om te uploaden",
         "LogoUploadHelp": "Upload een bestand in %s formaten met een minimum hoogte van %s pixels.",
+        "MenuDevelopment": "Ontwikkeling",
         "MenuDiagnostic": "Diagnose",
         "MenuGeneralSettings": "Algemene instellingen",
         "MenuManage": "Beheer",
