--- a/plugins/CoreHome/lang/fi.json
+++ b/plugins/CoreHome/lang/fi.json
@@ -3,6 +3,7 @@
         "CategoryNoData": "Tässä kategoriassa ei ole tietoja. Kokeile linkkiä \"Kaikki esiintymät\".",
         "CheckForUpdates": "Tarkista päivitykset",
         "CheckPiwikOut": "Tutustu Piwikiin!",
+        "ClickRowToExpandOrContract": "Klikkaa tätä riviä avataksesi tai sulkeaksesi alataulukon.",
         "CloseWidgetDirections": "Voit sulkea tämän widget-käyttöliittymän klikkaamalla \"X\"-ikonia käyttöliittymän yläreunassa.",
         "DataForThisReportHasBeenPurged": "Tämän raportin data on yli %s kuukautta vanhaa ja on poistettu.",
         "DataTableExcludeAggregateRows": "Yhdistetyt rivit ovat näkyvillä %s Piilota",
@@ -40,6 +41,7 @@
         "PeriodWeeks": "viikot",
         "PeriodYear": "Vuosi",
         "PeriodYears": "vuodet",
+        "PivotBySubtable": "Tämä raportti ei ole käännetty %s:n mukaan. Käännetty %s:llä.",
         "PluginDescription": "Verkkoanalyysin raporttien sisältö",
         "ReportGeneratedOn": "Raportti luotu %s",
         "ReportGeneratedXAgo": "Raportti luotu %s sitten",
@@ -55,6 +57,7 @@
         "SupportPiwik": "Tue Piwikiä!",
         "TableNoData": "Ei tietoja tässä taulukossa",
         "ThereIsNoDataForThisReport": "Tähän raporttiin ei ole tietoja.",
+        "UndoPivotBySubtable": "Tämä raportti on käännetty %s:llä. Kumoa kääntö",
         "UnFlattenDataTable": "Tämä raportti on tasainen %s Muuta hierarkiseksi",
         "ViewAllPiwikVideoTutorials": "Näytä kaikki Piwikin videokurssit",
         "WebAnalyticsReports": "Raportit",
