--- a/plugins/Goals/lang/fi.json
+++ b/plugins/Goals/lang/fi.json
@@ -10,6 +10,7 @@
         "BestKeywords": "Parhaat hakusanat ovat:",
         "BestReferrers": "Parhaat verkkosivuviittaajat ovat:",
         "CaseSensitive": "Kokoherkkä",
+        "ChooseGoal": "Valitse tavoite",
         "ClickOutlink": "Ulos lähtevän linkin painaminen",
         "ColumnAverageOrderRevenueDocumentation": "Keskimääräinen tilauksen arvo (AOV) on tilausten arvon summa jaettuna tilausten lukumäärällä.",
         "ColumnAveragePriceDocumentation": "Keskimääräinen tuotto (%s)",
@@ -82,6 +83,7 @@
         "Products": "Tuotteet",
         "ProductSKU": "Tuotteen SKU",
         "ReturningVisitorsConversionRateIs": "Palaavien kävijöiden siirtymäaste on %s",
+        "SendEvent": "Lähetä tapahtuma",
         "SingleGoalOverviewDocumentation": "Tämä on yleiskatsaus yksittäisen tavoitteen saavuttamiselle. %s Pienet kuvaajat suurenevat klikkaamalla.",
         "UpdateGoal": "Päivitä tavoite",
         "URL": "URL",
