--- a/plugins/Insights/lang/nl.json
+++ b/plugins/Insights/lang/nl.json
@@ -1,5 +1,6 @@
 {
     "Insights": {
+        "ControlComparedToDescription": "Groei vergeleken met",
         "DayComparedToPreviousDay": "vorige dag",
         "DayComparedToPreviousWeek": "zelfde dag vorige week",
         "DayComparedToPreviousYear": "zelfde dag vorig jaar",
@@ -13,6 +14,7 @@
         "MonthComparedToPreviousMonth": "vorige maand",
         "MonthComparedToPreviousYear": "zelfde maand vorig jaar",
         "NoResultMatchesCriteria": "Er komen geen rijen overeen met de criteria",
+        "TitleRowMoverAndShaker": "Deze rij heeft een grotere impact dan gemiddeld.",
         "TitleRowNewDetails": "'%1$s' is toegenomen met %2$s en is nieuw vergeleken met %3$s.",
         "WeekComparedToPreviousWeek": "vorige week",
         "WidgetCategory": "Inzichten",
