--- a/plugins/Installation/lang/fi.json
+++ b/plugins/Installation/lang/fi.json
@@ -1,5 +1,6 @@
 {
     "Installation": {
+        "CannotConnectToDb": "Tietokantaan yhdistäminen epäonnistui",
         "CollaborativeProject": "Piwik on yhteistyöprojekti, jonka parissa ovat työskennelleet ihmiset ympäri maailmaa suurella sydämellä.",
         "ConfigurationHelp": "Piwikin asetustiedosto on luotu väärin. Voit joko poistaa tiedoston config\/config.ini.php ja käyttää asennusohjelmaa uudelleen tai korjata tietokannan asetukset.",
         "ConfirmDeleteExistingTables": "Haluatko varmasti poistaa seuraavat taulut tietokannasta: %s? VAROITUS: TAULUJEN TIETOJA EI VOI PALAUTTAA EIKÄ POISTAMISTA VOI KUMOTA!",
@@ -36,11 +37,13 @@
         "NfsFilesystemWarningSuffixAdmin": "Tämä tarkoittaa, että Piwik on todella hidas käytettäessä tiedostopohjaisia sessioita.",
         "NfsFilesystemWarningSuffixInstall": "Tiedostopohjaisten sessioiden käyttäminen NFS:ssä on todella hidasta, joten Piwik käyttää tietokantasessioita. Jos sinulla on monia samanaikaisia ohjauspaneelin käyttäjiä, sinun tarvitsee ehkä lisätä tietokantaserverin käyttäjäyhteyksien maksimimäärää.",
         "NoConfigFound": "Piwikin asetustiedostoa ei löydy ja yrität siirtyä Piwikin sivuille.<br \/><b>  » Voit <a href='index.php'>asentaa Piwikin nyt<\/a><\/b><br \/><small>Jos asensit Piwikin aikaisemmin ja tietokannassa on jo tietoja, älä murehdi, tietoja ei hävitetä.<\/small>",
+        "NotSupported": "ei tuettu",
         "Optional": "Optionaalinen",
         "Password": "salasana",
         "PasswordDoNotMatch": "salasanat eivät täsmää",
         "PasswordRepeat": "salasana (uudelleen)",
         "PercentDone": "%s %% valmiina",
+        "PiwikOrgNewsletter": "lähetä minulle sähköpostia isoista Piwikin yhteisön päivityksistä",
         "PleaseFixTheFollowingErrors": "Korjaa seuraavat virheet",
         "PluginDescription": "Piwikin asennusprosessi. Tämä asennusprosessi suoritetaan yleensä vain kerran. Jos asetustiedosto config\/config.inc.php löytyy, asennus aloitetaan uudelleen.",
         "Requirements": "Piwikin vaatimukset",
@@ -61,6 +64,8 @@
         "SystemCheck": "Järjestelmän asetukset",
         "SystemCheckAutoUpdateHelp": "Huomioi: Piwikin yhden klikkauksen päivitys vaatii kirjoitusoikeudet Piwikin kansioon ja kansion kaikkeen sisältöön.",
         "SystemCheckCreateFunctionHelp": "Piwik käyttää anonyymejä funktioita takaisinkutsuihin.",
+        "SystemCheckCronArchiveProcess": "Arkistointityö",
+        "SystemCheckCronArchiveProcessCLI": "Prosessien hallinta komentoriviltä",
         "SystemCheckDatabaseHelp": "Piwik vaatii joko mysqli-lisäosan tai sekä PDO- että pdo_mysql-lisäosat..",
         "SystemCheckDebugBacktraceHelp": "View::factory ei voi luoda näkymää kutsuvalle moduulille.",
         "SystemCheckError": "Tapahtui virhe - täytyy korjata ennen jatkamista",
