--- a/plugins/PrivacyManager/lang/el.json
+++ b/plugins/PrivacyManager/lang/el.json
@@ -1,7 +1,7 @@
 {
     "PrivacyManager": {
         "AnonymizeIpDescription": "Επιλέξτε «Ναι» αν θέλετε το Piwik να μην ανιχνεύει πλήρως ταυτοποιημένες διευθύνσεις IP.",
-        "AnonymizeIpInlineHelp": "Αποκρύπτει το τελευταίο byte των διευθύνσεων IP των επισκεπτών σας για συμμόρφωση με τη τοπική νομοθεσία περί Ιδιωτικού Απορρήτου.",
+        "AnonymizeIpInlineHelp": "Αποκρύπτει το τελευταίο byte των διευθύνσεων IP των επισκεπτών σας για συμμόρφωση με την τοπική νομοθεσία περί Ιδιωτικού Απορρήτου.",
         "AnonymizeIpMaskLengtDescription": "Επιλέξτε πόσα bytes από τις διευθύνσεις IPs των επισκεπτών πρέπει να κρύβονται.",
         "AnonymizeIpMaskLength": "%s byte(s) - π.χ.. %s",
         "CannotLockSoDeleteLogActions": "Ο πίκανας log_action δεν θα διαγραφεί: δώστε δικαιώματα LOCK TABLES στον χρήστη MYSQL «%s».",
@@ -21,7 +21,7 @@
         "DeleteMaxRowsNoLimit": "χωρίς περιορισμό",
         "DeleteReportsConfirm": "Πρόκειται να ενεργοποιήσετε τη διαγραφή δεδομένων αναφορών. Αν οι παλαιές αναφορές απομακρυνθούν, θα πρέπει να τις ξαναδημιουργήσετε ώστε να τις δείτε. Θέλετε, σίγουρα, να συνεχίσετε;",
         "DeleteReportsDetailedInfo": "Τα δεδομένα από τους πίνακες αριθμητικής αρχειοθέτησης της βάσης δεδομένων (%s) και οι πίνακες αρχειοθέτησης blob (%s) θα διαγραφούν.",
-        "DeleteReportsInfo": "Αν ενεργοποιηθεί, οι παλαιές αναφορές θα διαγραφούν. %sΣας προτεινουμε να το ενεργοποιήσετε μόνο όταν ο διαθέσιμος χώρος της βάςης δεδομένων σας είναι περιορισμένος.%s",
+        "DeleteReportsInfo": "Αν ενεργοποιηθεί, οι παλαιές αναφορές θα διαγραφούν. %sΠροτείνουμε να ενεργοποιήσετε την επιλογή αυτή μόνο όταν ο διαθέσιμος χώρος της βάσης δεδομένων σας είναι περιορισμένος.%s",
         "DeleteReportsInfo2": "Αν δεν ενεργοποιήσατε το «%s», οι παλαιές αναφορές θα επαναδημιουργηθούν όταν ζητηθεί.",
         "DeleteReportsInfo3": "Αν έχετε ενεργοποιήσει το «%s», τα δεδομένα θα χαθούν.",
         "DeleteReportsOlderThan": "Διαγραφή αναφορών παλαιότερων από",
