--- a/plugins/ScheduledReports/lang/ja.json
+++ b/plugins/ScheduledReports/lang/ja.json
@@ -15,22 +15,34 @@
         "EmailHello": "こんにちは！",
         "EmailReports": "メールリポート",
         "EmailSchedule": "メールのスケジュール",
+        "EvolutionGraph": "トップの %s 値の履歴グラフを表示",
         "FrontPage": "表紙",
         "ManageEmailReports": "メールリポートの管理",
         "MonthlyScheduleHelp": "月間スケジュール： リポートは毎月1日に送信されます。",
         "MustBeLoggedIn": "カスタムリポートの作成とスケジュールにはログインする必要があります。",
+        "NoRecipients": "このレポートは、受取人がいません",
+        "OClock": "時",
+        "Pagination": "%s の %s ページ",
         "PiwikReports": "Piwik リポート",
         "PleaseFindAttachedFile": "%2$s の %1$s のリポートを添付しています。",
         "PleaseFindBelow": "%2$s の %1$s のリポートをお届けします。",
         "PluginDescription": "カスタムリポートを作成してダウンロードします。それらを、毎日、毎週または毎月メールで送信します。",
         "ReportFormat": "リポートのフォーマット",
+        "ReportHour": "でレポートを送信",
+        "ReportIncludeNWebsites": "このレポートは、現在利用可能な %s ウェブサイトから、少なくとも 1 訪問以上ある全ウェブサイトの主なメトリクスを含みます。",
+        "ReportSent": "送信されたレポート",
         "ReportsIncluded": "リポートに含める情報",
+        "ReportType": "経由でレポートを送信",
+        "ReportUpdated": "アップデートされたレポート",
+        "Segment_Deletion_Error": "このセグメントは、E メールレポート %s の作成に使用されるため、削除したり、他のユーザーに対し非表示にすることができません。このレポートからこのセグメントを削除した後、再度お試しください。",
+        "Segment_Help": "この E メールレポートでデータを適用するには、既存のカスタムセグメントを選択してください。ダッシュボード %s (ここをクリックして開く) %s でカスタムセグメントの作成、編集が可能です。次に、\"%s\" ボックスをクリックし、\"%s\"。",
         "SegmentAppliedToReports": "セグメント '%s' はレポートに適用されました。",
         "SendReportNow": "ただちにリポートを送信",
         "SendReportTo": "リポートの送信先",
         "SentToMe": "自分宛に送信",
         "TableOfContent": "リポート一覧",
         "ThereIsNoReportToManage": "ウェブサイト %s にはリポートがありません。",
+        "TopLinkTooltip": "あなたの E メールまたは顧客のアドレスに自動的に Piwik 統計情報を届けるには、E メールレポートを作成してください。",
         "TopOfReport": "トップへ戻る",
         "UpdateReport": "リポートの更新",
         "WeeklyScheduleHelp": "週間スケジュール： リポートは毎週月曜日に送信されます。"
