--- a/plugins/ScheduledReports/lang/nl.json
+++ b/plugins/ScheduledReports/lang/nl.json
@@ -15,7 +15,7 @@
         "EmailHello": "Hallo,",
         "EmailReports": "E-mail rapporten",
         "EmailSchedule": "E-mail tijdsschema",
-        "EvolutionGraph": "Toon historische grafiekn voor de top %s waarden",
+        "EvolutionGraph": "Toon historische grafieken voor de top %s waarden",
         "FrontPage": "Voorpagina",
         "ManageEmailReports": "Beheer de e-mail rapporten",
         "MonthlyScheduleHelp": "Maandelijks versturen: Rapport zal worden verzonden elke eerste dag van de maand.",
