--- a/lang/da.json
+++ b/lang/da.json
@@ -209,6 +209,7 @@
         "LastDays": "Sidste %s dage (inklusiv i dag)",
         "LastDaysShort": "Sidste %s dage",
         "LayoutDirection": "ltr",
+        "LearnMore": "%1$sLær mere%2$s",
         "Live": "Live",
         "Loading": "Indlæser...",
         "LoadingData": "Indlæser data...",
@@ -354,6 +355,7 @@
         "Seconds": "%ss.",
         "SeeAll": "se samtlige",
         "SeeTheOfficialDocumentationForMoreInformation": "Se den %sofficielle dokumentation%s for mere information.",
+        "SeeThisFaq": "Se %1$sdenne faq%2$s.",
         "Segment": "Segment",
         "SelectYesIfYouWantToSendEmailsViaServer": "Vælg \"Ja\", hvis du ønsker eller er nødt til at sende e-mail via en bestemt server i stedet for den lokale mail-funktionen",
         "Settings": "Indstillinger",
@@ -432,6 +434,7 @@
         "WarningFileIntegrityNoMd5file": "Fil integritetstjek kunne ikke gennemføres pga. manglende md5_file () funktion.",
         "WarningPasswordStored": "%sAdvarsel:%s Adgangskoden bliver gemt i konfigurationsfilen synlig for alle, der har adgang til den.",
         "WarningPhpVersionXIsTooOld": "PHP version %s har nået slutningen af ​​sin levetid (EOL). Du opfordres kraftigt til at opgradere til den aktuelle version, fordi brug af denne version kan udsætte dig for sikkerhedshuller og fejl, som er blevet rettet i nyere versioner af PHP.",
+        "WarningPiwikWillStopSupportingPHPVersion": "Piwik vil ophøre med at understøtte PHP-version i %s. Opgrader PHP versionen, før det er for sent!",
         "Website": "Hjemmeside",
         "Weekly": "Ugentligt",
         "WeeklyReport": "ugentlig",
