--- a/lang/de.json
+++ b/lang/de.json
@@ -209,6 +209,7 @@
         "LastDays": "Letzte %s Tage (inkl. heute)",
         "LastDaysShort": "Letzte %s Tage",
         "LayoutDirection": "ltr",
+        "LearnMore": "%1$sErfahren Sie mehr%2$s",
         "Live": "Echtzeit",
         "Loading": "Laden ...",
         "LoadingData": "Lade Daten ...",
@@ -354,6 +355,7 @@
         "Seconds": "%ss",
         "SeeAll": "alle ansehen",
         "SeeTheOfficialDocumentationForMoreInformation": "Weitere Informationen finden Sie in der %soffiziellen Dokumentation%s.",
+        "SeeThisFaq": "Siehe %1$sdiese FAQ%2$s.",
         "Segment": "Segment",
         "SelectYesIfYouWantToSendEmailsViaServer": "Wählen Sie \"Ja\", wenn Sie E-Mails über einen Server verschicken möchten, anstatt die lokale mail()-Funktion zu benutzen.",
         "Settings": "Einstellungen",
@@ -432,6 +434,7 @@
         "WarningFileIntegrityNoMd5file": "Durch die fehlende md5_file() Funktion konnte die Integritätsprüfung nicht durchgeführt werden.",
         "WarningPasswordStored": "%sWarnung:%s Dieses Passwort wird in der Konfigurationsdatei gespeichert und ist so für jeden sichtbar, der auf diese Datei Zugriff hat.",
         "WarningPhpVersionXIsTooOld": "Die von Ihnen eingesetzte PHP Version %s hat das Ende der Lebensdauer (EOL) erreicht. Es wird dringend angeraten, ein Update auf eine aktuelle Version durchzuführen, da der Einsatz dieser Version zu Sicherheitsrisiken und Fehlern führen kann, welche in neueren PHP Versionen korrigiert wurden.",
+        "WarningPiwikWillStopSupportingPHPVersion": "Piwik wird die Unterstützung für diese PHP Version im %s einstellen. Aktualisieren Sie ihre PHP Version bevor es zu spät ist!",
         "Website": "Webseite",
         "Weekly": "Wöchentlich",
         "WeeklyReport": "wöchentlich",
