--- a/lang/fi.json
+++ b/lang/fi.json
@@ -32,6 +32,7 @@
         "ChooseLanguage": "Valitse kieli",
         "ChoosePeriod": "Valitse aikaväli",
         "ChooseWebsite": "Valitse verkkosivu",
+        "Clear": "Tyhjennä",
         "ClickHere": "Klikkaa tästä lisätietoja.",
         "ClickToChangePeriod": "Vaihda aikaväliä klikkaamalla uudelleen",
         "Close": "Sulje",
@@ -65,6 +66,7 @@
         "ColumnNbActionsDocumentation": "Kävijöiden suorittamien toimintojen lukumäärä. Toimintoja ovat sivujen katsominen, lataukset ja lähtevien linkkien avaaminen.",
         "ColumnNbUniqVisitors": "Yksilölliset kävijät",
         "ColumnNbUniqVisitorsDocumentation": "Yksilöllisten kävijöiden lukumäärä. Jokainen kävijä lasketaan vain kerran, vaikka käyntejä samana päivänä olisi ollut useita.",
+        "ColumnNbUsers": "Käyttäjät",
         "ColumnNbVisits": "Käynnit",
         "ColumnNbVisitsDocumentation": "Jos kävijä tuli sivulle ensimmäistä kertaa tai edellisestä toiminnosta on yli 30 minuuttia, toiminto lasketaan uudeksi käynniksi.",
         "ColumnPageBounceRateDocumentation": "% käynneistä jotka alkoivat tällä sivulla ja päättyivät heti.",
@@ -164,9 +166,11 @@
         "ExceptionPrivilege": "Et voi käyttää resurssia, sillä tarvitset pääsyn %s.",
         "ExceptionPrivilegeAccessWebsite": "Et voi käyttää tätä resurssia, sillä siihen vaaditaan %s pääsy sivulle %d.",
         "ExceptionPrivilegeAtLeastOneWebsite": "Et voi käyttää resurssia, koska siihen vaaditaan %s pääsy vähintään yhdelle sivulle.",
+        "ExceptionReportNotFound": "Pyydettyä raporttia ei ole olemassa.",
         "ExceptionUnableToStartSession": "Session käynnistäminen ei onnistu.",
         "ExceptionUndeletableFile": "Tiedostoa %s ei voi poistaa",
         "ExceptionUnreadableFileDisabledMethod": "Asetustiedostoa {%s} ei voi lukea. %s saattaa olla poistettuna käytöstä.",
+        "ExceptionWidgetNotFound": "Pyydettyä vimpainta ei ole olemassa.",
         "ExpandDataTableFooter": "Vaihda visualisointia tai määrittele raportti",
         "Export": "Vie",
         "ExportAsImage": "Tallenna kuvaksi",
@@ -202,6 +206,7 @@
         "LastDays": "Edelliset %s päivää (sisältäen tämän päivän)",
         "LastDaysShort": "Edelliset %s päivää",
         "LayoutDirection": "ltr",
+        "LearnMore": "%1$sopi lisää%2$s",
         "Live": "Reaaliaikainen",
         "Loading": "Ladataan...",
         "LoadingData": "Ladataan tietoja...",
@@ -266,6 +271,7 @@
         "NotValid": "%s on virheellinen",
         "NSeconds": "%s sekuntia",
         "NumberOfVisits": "Käyntien lukumäärä",
+        "NUsers": "%s käyttäjää",
         "NVisits": "%s käyntiä",
         "Ok": "Ok",
         "OneAction": "1 toiminto",
@@ -398,6 +404,7 @@
         "Unknown": "Tuntematon",
         "Upload": "Lähetä",
         "UsePlusMinusIconsDocumentation": "Käytä plus- ja miinus-merkkejä vasemmalla.",
+        "UserId": "Käyttäjän ID",
         "Username": "Käyttäjätunnus",
         "UseSMTPServerForEmail": "Käytä SMTP-palvelinta sähköpostille",
         "Value": "Arvo",
@@ -421,6 +428,7 @@
         "WarningFileIntegrityNoManifestDeployingFromGit": "Jos olet ottanut Piwikin käyttöön Git-järjestelmän kautta, tämä viesti on normaali.",
         "WarningFileIntegrityNoMd5file": "Tiedostojen eheystarkistusta ei voi suorittaa, funktio md5_file() puuttuu.",
         "WarningPasswordStored": "%sVaroitus:%s tämä salasana tallennetaan salaamattomana asetustiedostoon. Kaikki joilla on pääsy tiedostoon näkevät salasanan.",
+        "WarningPiwikWillStopSupportingPHPVersion": "Piwik ei tue tätä versiota PHP:stä %s. Päivitä PHP:n versio ennen kuin se on liian myöhäistä!",
         "Website": "Verkkosivu",
         "Weekly": "Viikoittain",
         "WeeklyReport": "viikottainen",
