--- a/lang/ja.json
+++ b/lang/ja.json
@@ -208,6 +208,7 @@
         "LastDays": "最後の %s 日間(今日を含む)",
         "LastDaysShort": "最後の %s 日間",
         "LayoutDirection": "ltr",
+        "LearnMore": "%1$s より多くの %2$s を学ぶ",
         "Live": "ライブ",
         "Loading": "読み込み中...",
         "LoadingData": "データ読み込み中...",
@@ -432,6 +433,7 @@
         "WarningFileIntegrityNoMd5file": "md5_file() 関数が存在しないため、ファイルの整合性チェックを完了することができませんでした。",
         "WarningPasswordStored": "%s警告：%s このパスワードは設定ファイルに保存されます。 この設定ファイルにアクセス可能な人であれば、パスワードを見られる可能性があることに注意してください。",
         "WarningPhpVersionXIsTooOld": "ご利用の PHP バージョン %s は、利用期間が終了( EOL )しています。セキュリティの脆弱性と、最新の PHP バージョンで既に修正されたバグに対するリスクを避けるため、必ず最新バージョンへアップグレードしてください。",
+        "WarningPiwikWillStopSupportingPHPVersion": "Piwik はこの PHP バージョン %s でサポートを停止します。手遅れになる前に PHP のバージョンをアップグレード しましょう！",
         "Website": "ウェブサイト",
         "Weekly": "毎週",
         "WeeklyReport": "毎週",
@@ -521,5 +523,19 @@
         "VerifyAccount": "アカウントの検証",
         "VerifyLoginData": "ユーザー名とパスワードの組み合わせが正しいことを確認してください。",
         "YouAreOffline": "現在はオフラインです"
+    },
+    "RowEvolution": {
+        "AvailableMetrics": "利用可能なメトリクス",
+        "CompareDocumentation": "複数レコードを比較するには、下のリンクをクリックし、同じ表から各列ごとにこのポップアップを開いてください。このポップアップを開かずに、列をマークし比較するには、Shift- クリックを使用してください。",
+        "CompareRows": "レコードを比較",
+        "ComparingRecords": "%s 列の比較",
+        "Documentation": "大展開グラフにこれらを表示するには、メトリクスをクリックしてください。複数メトリクスを一度に表示するには、shift- クリックを使用してください。",
+        "MetricBetweenText": "%s から %s へ",
+        "MetricChangeText": "対象期間にわたる %s 変化",
+        "MetricMinMax": "対象期間にわたる %2$s と %3$s の間に並べられた %1$s",
+        "MetricsFor": "%s のメトリクス",
+        "MultiRowEvolutionTitle": "複数列の展開",
+        "PickAnotherRow": "比較したいもう 1 つの列を選択",
+        "PickARow": "比較する列を選択"
     }
 }
