--- a/plugins/DevicesDetection/lang/el.json
+++ b/plugins/DevicesDetection/lang/el.json
@@ -1,5 +1,6 @@
 {
     "DevicesDetection": {
+        "BrowserEngineDocumentation": "Αυτό το διάγραμμα δείχνει τους φυλλομετρητές των επισκεπτών σε οικογένειες φυλλομετρητών. %s Η πιο σημαντική πληροφορία για τους δημιουργούς ιστοσελίδων είναι οι μηχανές μετάφρασης που χρησιμοποιούν οι επισκέπτες. Οι ετικέτες περιέχουν τα ονόματα των μηχανών και σε εισαγωγικά τον πιο κοινό φυλλομετρητή που τη χρησιμοποιεί.",
         "BrowserVersions": "Εκδόσεις προγραμμάτων περιήγησης",
         "Camera": "Κάμερα",
         "CarBrowser": "Πρόγραμμα περιήγησης αυτοκινήτου",
