--- a/plugins/DevicesDetection/lang/ru.json
+++ b/plugins/DevicesDetection/lang/ru.json
@@ -1,5 +1,6 @@
 {
     "DevicesDetection": {
+        "BrowserEngineDocumentation": "Этот график показывается информацию о браузерах посетителей, разбитую по типу семейства. %s Наиболее важная информация для веб-разработчиков - на каком движке работают браузеры посетителей. Значки содержат имя движка в зависимости от наиболее популярного браузера, который работает на этом движке.",
         "BrowserVersions": "Версии браузеров",
         "CarBrowser": "Автомобильный браузер",
         "Console": "Консоль",
