--- a/plugins/Goals/lang/nl.json
+++ b/plugins/Goals/lang/nl.json
@@ -10,6 +10,7 @@
         "BestKeywords": "Uw beste presterende sleutelwoorden zijn:",
         "BestReferrers": "Uw beste presterende referrers zijn:",
         "CaseSensitive": "Hoofdletter gevoelig",
+        "ChooseGoal": "Kies het doel",
         "ClickOutlink": "Klik op een link naar een externe website",
         "ColumnAverageOrderRevenueDocumentation": "Gemiddelde orderwaarde (AOV) zijnde de totale inkomsten van alle Ecommerce orders, gedeeld door het aantal orders.",
         "ColumnAveragePriceDocumentation": "De gemiddelde inkomsten voor deze %s.",
