--- a/plugins/LanguagesManager/lang/fi.json
+++ b/plugins/LanguagesManager/lang/fi.json
@@ -1,6 +1,7 @@
 {
     "LanguagesManager": {
         "AboutPiwikTranslations": "Tietoja Piwikin käännöksistä",
-        "PluginDescription": "Tämä lisäosa listaa saatavilla olevat kielet Piwikin käyttöliittymässä. Valittu kieli tallennetaan käyttäjäkohtaisesti."
+        "PluginDescription": "Tämä lisäosa listaa saatavilla olevat kielet Piwikin käyttöliittymässä. Valittu kieli tallennetaan käyttäjäkohtaisesti.",
+        "TranslationSearch": "Käännösten haku"
     }
 }
