--- a/plugins/Overlay/lang/ja.json
+++ b/plugins/Overlay/lang/ja.json
@@ -2,6 +2,19 @@
     "Overlay": {
         "Clicks": "%s クリック",
         "ClicksFromXLinks": "%2$s リンクの 1 つからの%1$s クリック",
-        "Domain": "ドメイン"
+        "Domain": "ドメイン",
+        "ErrorNotLoading": "ページオーバーレイ・セッションがまだ開始されていません。",
+        "ErrorNotLoadingDetails": "右側にロードされたページには、Piwik 追跡コードがありません。ページレポートとは異なるページで、オーバーレイの起動をお試しください。",
+        "ErrorNotLoadingDetailsSSL": "Piwik を https 経由で利用していますが、お使いのパソコンが SSL をサポートしていないことが原因として考えられます。http 経由でのご利用をお試しください。",
+        "ErrorNotLoadingLink": "トラブルシューティングのためのヒントは、こちらをクリック",
+        "Link": "リンク",
+        "Location": "位置情報",
+        "NoData": "このページに対する選択された期間のデータは存在しません。",
+        "OneClick": "1 クリック",
+        "OpenFullScreen": "フルスクリーンへ (サイドバーなし)",
+        "Overlay": "ページオーバーレイ",
+        "PluginDescription": "実際のウェブサイトで、オーバーレイとして分析データを参照してください。",
+        "RedirectUrlError": "URL \"%s\" に対するページオーバーレイを開こうとしています。%s Piwik 設定のドメインが、すべてリンクに一致しません。",
+        "RedirectUrlErrorUser": "管理者に、任意のドメインを追加 URL として追加するよう管理者に依頼してください。"
     }
 }
