--- a/plugins/PrivacyManager/lang/ja.json
+++ b/plugins/PrivacyManager/lang/ja.json
@@ -4,8 +4,10 @@
         "AnonymizeIpInlineHelp": "ローカルプライバシー規則やガイドラインに応じて、ビジターの IP アドレスの最終バイトを匿名化します。",
         "AnonymizeIpMaskLengtDescription": "ビジターのIPアドレスから何バイトマスクするか選択してください。",
         "AnonymizeIpMaskLength": "%s バイト- 例. %s",
+        "CannotLockSoDeleteLogActions": "log_action 表は、パージされません。'%s' MYSQL ユーザーに、LOCK TABLES 権限を付与してください。",
         "ClickHereSettings": "%s 設定はこちらをクリック",
         "CurrentDBSize": "現在のデータベースサイズ",
+        "DBPurged": "データベースがパージされました。",
         "DeleteBothConfirm": "ログデータとリポートデータの両方を削除可能にしようとしています。古い解析データは永久に見られなくなります。続けますか？",
         "DeleteDataDescription": "データベースのサイズを小さく保つために、古い訪問者のログ、かつ\/または生成されたレポートを定期的に削除するようPiwikを設定できます。",
         "DeleteDataDescription2": "必要であれば、事前処理されたレポートは削除せず、ビジットとページビューとコンバージョンのログデータのみの削除もできます。あるいは、事前処理されたレポートを削除し、ログデータを保存することもできます。",
@@ -34,6 +36,8 @@
         "DoNotTrack_SupportDNTPreference": "「トラック（追跡）しない」機能のサポート",
         "EstimatedDBSizeAfterPurge": "削除後の推定データベースサイズ",
         "EstimatedSpaceSaved": "確保される推定容量",
+        "GeolocationAnonymizeIpNote": "注) 位置情報探索機能は、匿名化された 1byte の場合とほぼ同じ結果になります。2byte 以上を使用すると、位置情報探索機能が不正確になります。",
+        "GetPurgeEstimate": "パージ推定値を取得",
         "KeepBasicMetrics": "基本のメトリックスを保持(ビジット、ページビュー、直帰率、目標コンバージョン、eコマースコンバージョン等)",
         "KeepDataFor": "以下のデータ全てを保持：",
         "KeepReportSegments": "上記の保持されるデータについては、レポートのセグメントも保持する",
@@ -46,10 +50,14 @@
         "PurgeNow": "今DBを削除する",
         "PurgeNowConfirm": "データベースから永久にデータを削除しようとしています。続けますか？",
         "PurgingData": "データを削除しています...",
+        "RecommendedForPrivacy": "(プライバシー推奨)",
         "ReportsDataSavedEstimate": "データベースサイズ",
         "SaveSettingsBeforePurge": "データ削除設定を変更しました。削除が開始される前に保存してください。",
+        "SeeAlsoOurOfficialGuidePrivacy": "私達のオフィシャルガイドもご確認ください。%sWeb Analytics Privacy%s",
         "Teaser": "このページでは、既存の法律にのっとり、Piwikがプライバシーに準拠するようカスタマイズすることができます：%s 匿名の訪問者のIPアドレス %s、%s 自動的にデータベースから古いビジターのログを削除 %s、%sウェブサイトをオプトアウトする仕組みの提供%s による。",
         "TeaserHeadline": "プライバシー設定",
+        "UseAnonymizedIpForVisitEnrichment": "訪問数を増やす際、匿名化された IP アドレスもご利用ください。",
+        "UseAnonymizedIpForVisitEnrichmentNote": "IP およびプロバイダー経由の位置情報探索機能のようなプラグインは、ビジターのメタデータを修正します。デフォルトでは、このようなプラグインは匿名 IP アドレスを使用します。'No' を選ぶと、非匿名の完全な IP アドレスが代わりに使用されます。この場合、データの正確性は向上しますがプライバシーは多少劣ります。",
         "UseAnonymizeIp": "匿名の訪問者のIPアドレス",
         "UseDeleteLog": "定期的にデータベースから古いビジターのログを削除する",
         "UseDeleteReports": "定期的にデータベースから古いリポートを削除"
