--- a/plugins/Provider/lang/da.json
+++ b/plugins/Provider/lang/da.json
@@ -3,6 +3,7 @@
         "ColumnProvider": "Udbyder",
         "PluginDescription": "Rapporter de besøgendes udbyder.",
         "ProviderReportDocumentation": "Rapporten viser hvilken Internet udbyder de besøgende bruger. Klik på en udbyders navn for flere oplysninger. %s Hvis Piwik ikke kan bestemme besøgendes udbyder, er den opført som IP.",
+        "ProviderReportFooter": "Ukendt udbyder betyder at IP-adressen kunne ikke slås op.",
         "SubmenuLocationsProvider": "Sted og udbyder",
         "WidgetProviders": "Udbydere"
     }
