--- a/plugins/SEO/lang/ja.json
+++ b/plugins/SEO/lang/ja.json
@@ -1,9 +1,15 @@
 {
     "SEO": {
         "AlexaRank": "Alexa ランク",
+        "Bing_IndexedPages": "Bing インデックスページ",
+        "Dmoz": "DMOZ エントリー",
         "DomainAge": "ドメインエイジ",
+        "ExternalBacklinks": "外部バックリンク (Majestic)",
+        "Google_IndexedPages": "Google インデックスページ",
         "Rank": "ランク",
+        "ReferrerDomains": "参照元ドメイン (Majestic)",
         "SeoRankings": "SEO ランキング",
-        "SEORankingsFor": "%s の SEO ランキング"
+        "SEORankingsFor": "%s の SEO ランキング",
+        "ViewBacklinksOnMajesticSEO": "MajesticSEO.com の外部バックリンクレポートを表示"
     }
 }
