--- a/plugins/Transitions/lang/ja.json
+++ b/plugins/Transitions/lang/ja.json
@@ -1,5 +1,28 @@
 {
     "Transitions": {
-        "BouncesInline": "%s のバウンス"
+        "BouncesInline": "%s のバウンス",
+        "DirectEntries": "直接エントリー",
+        "ErrorBack": "前の操作に戻る",
+        "ExitsInline": "%s 終了",
+        "FromCampaigns": "キャンペーンから",
+        "FromPreviousPages": "内部ページから",
+        "FromPreviousPagesInline": "内部ページからの %s",
+        "FromPreviousSiteSearches": "内部検索から",
+        "FromPreviousSiteSearchesInline": "内部検索からの %s",
+        "FromSearchEngines": "検索エンジンから",
+        "FromWebsites": "ウェブサイトから",
+        "IncomingTraffic": "受信トラフィック",
+        "LoopsInline": "%s ページリロード",
+        "NoDataForAction": "%s に対するデータはありません。",
+        "NoDataForActionDetails": "アクションが %s の期間ページビューが無かったか、無効です。",
+        "OutgoingTraffic": "送信トラフィック",
+        "PluginDescription": "各ページ URL の前後のアクションについてレポートします。",
+        "ShareOfAllPageviews": "このページは、%s ページビューでした ( 全ページビューの %s )",
+        "ToFollowingPages": "内部ページへ",
+        "ToFollowingPagesInline": "内部ページへの %s",
+        "ToFollowingSiteSearches": "内部検索",
+        "ToFollowingSiteSearchesInline": "%s 内部検索",
+        "XOfAllPageviews": "このページの全ビューの %s",
+        "XOutOfYVisits": "(%s の内の) %s"
     }
 }
