--- a/plugins/UserCountryMap/lang/ja.json
+++ b/plugins/UserCountryMap/lang/ja.json
@@ -1,9 +1,27 @@
 {
     "UserCountryMap": {
+        "AndNOthers": "と、%s ほか",
         "Cities": "都市",
         "Countries": "国",
+        "DaysAgo": "%s 日前",
+        "GoalConversions": "%s 目標コンバージョン",
+        "Hours": "時間",
+        "HoursAgo": "%s 時間前",
         "map": "地図",
+        "Minutes": "分",
+        "MinutesAgo": "%s 分前",
+        "None": "なし",
+        "NoVisit": "訪問なし",
         "RealTimeMap": "リアルタイムマップ",
-        "VisitorMap": "ビジターマップ"
+        "Regions": "地域",
+        "Searches": "%s 検索",
+        "Seconds": "秒",
+        "SecondsAgo": "%s 秒前",
+        "ShowingVisits": "位置情報が探索された最後の訪問",
+        "Unlocated": "%c からの訪問の <b> %s <\/b> %p は、位置情報が特定できませんでした。",
+        "VisitorMap": "ビジターマップ",
+        "WithUnknownCity": "未知の都市と %s",
+        "WithUnknownRegion": "未知の地域と %s",
+        "WorldWide": "世界規模"
     }
 }
