--- a/plugins/UsersManager/lang/ja.json
+++ b/plugins/UsersManager/lang/ja.json
@@ -3,16 +3,23 @@
         "AddUser": "新しいユーザーの追加",
         "Alias": "エイリアス",
         "AllWebsites": "全ウェブサイト",
+        "AnonymousUserHasViewAccess": "注) %1$s ユーザーはウェブサイトへの %2$s アクセス権を持っています。",
+        "AnonymousUserHasViewAccess2": "あなたの解析レポートとビジター情報は、誰でも閲覧可能です。",
         "ApplyToAllWebsites": "全ウェブサイトに適用",
         "ChangeAllConfirm": "本当に全ウェブサイトでの '%s' のパーミッションを変更しますか？",
         "ChangePasswordConfirm": "パスワードを変更すると、トークンも変更されます。本当に続けますか？",
         "ClickHereToDeleteTheCookie": "Cookie を削除し、Piwik があなた自身のビジットもトラッキングするようにするには、ここをクリックします。",
         "ClickHereToSetTheCookieOnDomain": "%s の Piwik にトラッキングされるウェブサイトでの、あなた自身のビジットを除外するための Cookie をセットするには、ここをクリックします。",
+        "ConfirmGrantSuperUserAccess": "'%s' に対し、スーパーユーザーアクセス権を本当に付与してよろしいですか? 警告:スーパーユーザーアクセス権を付与されたユーザーは、すべてのウェブサイトへのアクセス権を持ち、あらゆる管理タスクを実行できるようになります。",
+        "ConfirmProhibitMySuperUserAccess": "%s、あなた自身のスーパーユーザーアクセス権を本当に削除してよろしいですか? 削除後、すべてのウェブサイトへの全権限とアクセスを失い、Piwik からログアウトされます。",
+        "ConfirmProhibitOtherUsersSuperUserAccess": "スーパーユーザーアクセス権を '%s' から本当に削除してよろしいですか? スーパーユーザーアクセス権を削除されたユーザーは、すべてのウェブサイトへの全権限とアクセスを失います。削除後は、必要に応じて各ウェブサイトへの権限を設定してください。",
         "DeleteConfirm": "本当にユーザー %s を削除しますか？",
         "Email": "メール",
+        "EmailYourAdministrator": "%1$sE-mail your administrator about this problem%2$s 。",
         "ExceptionAccessValues": "パラメータ access は、次の値のいずれかを持つ必要があります： [ %s ]",
         "ExceptionAdminAnonymous": "'anonymous' ユーザーに '管理' 権限を与えることはできません。",
         "ExceptionDeleteDoesNotExist": "ユーザー '%s' は存在しないため、削除することができません。",
+        "ExceptionDeleteOnlyUserWithSuperUserAccess": "ユーザー '%s' の削除は、不可能です。",
         "ExceptionEditAnonymous": "anonymous ユーザーは、Piwik がログインしていないユーザーを定義するために使用するため、編集や削除はできません。 例えば、'anonymous' ユーザーに '表示' 権限を与えることによって、統計をパブリックにすることができます。",
         "ExceptionEmailExists": "メールアドレスが '%s' のユーザーはすでに存在します。",
         "ExceptionInvalidEmail": "メールアドレスが有効な形式ではありません。",
@@ -20,21 +27,31 @@
         "ExceptionInvalidPassword": "パスワードの長さは %1$s〜%2$s 文字である必要があります。",
         "ExceptionLoginExists": "ユーザー名 '%s' はすでに存在します。",
         "ExceptionPasswordMD5HashExpected": "UsersManager.getTokenAuth は、MD5 ハッシュ値のパスワード（32文字長の文字列）を想定しています。 このメソッドをコールする前に、パスワードに対して md5() 関数をコールしてください。",
+        "ExceptionRemoveSuperUserAccessOnlySuperUser": "スーパーユーザーアクセスをユーザー '%s' から削除することができません。",
+        "ExceptionSuperUserAccess": "このユーザーはスーパーユーザーアクセス権を持ち、既に Piwik の全ウェブサイトへのアクセスおよび修正の権限を持っています。このユーザーからスーパーユーザーアクセス権を削除し、再度試すことができます。",
         "ExceptionUserDoesNotExist": "ユーザー '%s' は存在しません。",
+        "ExceptionYouMustGrantSuperUserAccessFirst": "スーパーユーザーアクセス権を持つユーザーが、少なくとも 1 人以上必要です。まず、別のユーザーにスーパーユーザーアクセス権を付与してください。",
         "ExcludeVisitsViaCookie": "自分自身のビジットを除外（Cookie 使用）",
         "ForAnonymousUsersReportDateToLoadByDefault": "anonymous ユーザー用にデフォルトで読み込むリポートの日付",
         "IfYouWouldLikeToChangeThePasswordTypeANewOne": "パスワードを変更したい場合は、新しいパスワードを入力します。 変更しない場合は、空欄のままにします。",
+        "InjectedHostCannotChangePwd": "現在未知のホスト (%1$s) で訪問しています。この問題が解決するまで、パスワードの変更ができません。",
+        "LastSeen": "最終表示",
         "MainDescription": "各ユーザーのウェブサイト上での Piwik 権限を決定します。 また、全ウェブサイトのパーミッションを一度に設定することもできます。",
         "ManageAccess": "権限の管理",
         "MenuAnonymousUserSettings": "anonymous ユーザーの設定",
         "MenuUsers": "ユーザー",
         "MenuUserSettings": "ユーザーの設定",
+        "NoteNoAnonymousUserAccessSettingsWontBeUsed2": "注) 匿名ユーザーがアクセスできるウェブサイトをお持ちでないため、このセクションでは設定の変更ができません。",
+        "NoUsersExist": "まだユーザーがいません。",
         "PluginDescription": "Piwik でのユーザー管理は、新規ユーザーの追加、既存ユーザーの編集、パーミッションの更新を行うことができます。 また、すべての動作は API を通じて利用することができます。",
         "PrivAdmin": "管理",
         "PrivNone": "権限なし",
         "PrivView": "表示",
         "ReportDateToLoadByDefault": "デフォルトで読み込むリポートの日付",
         "ReportToLoadByDefault": "デフォルトで読み込むリポート",
+        "SuperUserAccessManagement": "スーパーユーザーアクセス権の管理",
+        "SuperUserAccessManagementGrantMore": "ここでは、スーパーユーザーアクセス権を Piwik の他のユーザーに付与することができます。この機能は、慎重にご利用ください。",
+        "SuperUserAccessManagementMainDescription": "スーパーユーザーは、以下を含む、すべての管理タスクを実行することができる最高の権限を持ちます。: 追跡対象サイトやユーザーの新規追加、ユーザー権限の変更、プラグインの有効\/無効化、マーケットプレイスからの新しいプラグインのインストール",
         "TheLoginScreen": "ログイン画面",
         "ThereAreCurrentlyNRegisteredUsers": "現在 %s 名のユーザーが登録されています。",
         "TypeYourPasswordAgain": "新しいパスワードを再入力します。",
