--- a/plugins/VisitTime/lang/ja.json
+++ b/plugins/VisitTime/lang/ja.json
@@ -2,12 +2,17 @@
     "VisitTime": {
         "ColumnLocalTime": "ローカルタイム",
         "ColumnServerTime": "サーバタイム",
+        "DayOfWeek": "曜日",
         "LocalTime": "ローカルタイム単位のビジット",
         "NHour": "%s時",
         "PluginDescription": "ローカルタイムとサーバータイムでリポートします。 サーバタイムの情報は、ウェブサイトのメンテナンスを予定するのに便利です。",
         "ServerTime": "サーバタイム単位のビジット",
         "SubmenuTimes": "時間",
+        "VisitsByDayOfWeek": "曜日別訪問数",
+        "WidgetByDayOfWeekDocumentation": "このグラフは、曜日ごとのウェブサイト訪問数を表示します",
         "WidgetLocalTime": "ローカルタイム単位のビジット",
-        "WidgetServerTime": "サーバタイム単位のビジット"
+        "WidgetLocalTimeDocumentation": "このグラフは、訪問中の %s ビジターの時間帯 %s を表示します。",
+        "WidgetServerTime": "サーバタイム単位のビジット",
+        "WidgetServerTimeDocumentation": "このグラフは、訪問中の %s サーバー時間帯 %s を表示します。"
     }
 }
