--- a/plugins/Widgetize/lang/ja.json
+++ b/plugins/Widgetize/lang/ja.json
@@ -1,6 +1,7 @@
 {
     "Widgetize": {
         "OpenInNewWindow": "新しいウィンドウで開く",
-        "PluginDescription": "あなたのブログ、ウェブサイト、Igoogle、Netvibes 等に、任意の Piwik ウィジェットをとても簡単にエクスポートできるようにします。"
+        "PluginDescription": "あなたのブログ、ウェブサイト、Igoogle、Netvibes 等に、任意の Piwik ウィジェットをとても簡単にエクスポートできるようにします。",
+        "TopLinkTooltip": "Piwik レポートをウィジェットとしてエクスポートし、ダッシュボードを iframe としてご利用のアプリケーションに埋め込んでください。"
     }
 }
